--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -10,7 +10,7 @@ one:
 two:
   userId: aoba
   user_name: 青葉りんか
-  profile: メガネ
+  profile: ミラクルキラッツの青葉りんかです！みんなよろしくね✨
   icon: aobaIcon
   header: aobaHeader
 
